<resources>
    <string name="app_name">VP-TODAY</string>
    <string name="settings">Einstellungen</string>
    <string name="about">Über</string>
    <string name="rateus">Bewerte uns!</string>
    <string name="ratelbl">Bewerten</string>
    <string name="stufe">Stufe:</string>
    <string name="apply">Übernehmen</string>
    <string name="cancel">Abbrechen</string>
    <string name="logoff">Abmelden</string>
    <string name="btnRateSend">Senden</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="melvinemail">m.zaehl.vortex@gmail.com</string>
    <string name="simonemail">s.draeger.vortex@gmail.com</string>
    <string name="florianemail">f.koll.vortex@gmail.com</string>
    <string name="botemail">mailbot.vortex@gmail.com</string>
    <string name="botpwd">GOIPGANG</string>
    <string name="abouttxt"><i>VP-TODAY</i>&#169; a <b>VorteX Dev. Corp.</b> development.\n
                            Build: %1$d, Date: %2$s\n
                            <u>All rights reserved.</u>\n\n
                            <u>Copyright</u>\n
                            The underlying Application is conducted under absolute closed-source copyright.\n
                            Any attempts of decompilation or unauthorized distribution are strictly prohibited.\n\n
                            On need of contacting the publisher, please refer to the following persons:\n
                            <u>Simon Dräger <i>(Head Admin / Developer)</i></u> &lt;%4$s&gt;\n
                            <u>Melvin Zähl <i>(Head Admin / Developer)</i></u> &lt;%3$s&gt;\n
                            <u>Florian Koll <i>(Customer Support / Project Management / Bug Hunter)\n</i></u> &lt;%5$s&gt;
    </string>
    <string name="license">
        <b>License</b>\n
        <u>All rights are reserved to</u> <i>VorteX Dev. Corp.</i>.\n
        The underlying Application is delivered under absolute closed-source copyright.\n
        Any attempts of decompilation or unauthorized distribution are strictly prohibited.\n
        The authors are not responsible for any consequences drawn from unintentionally faulty information produced by the Application.\n
        <b>All information is subject to change.</b>\n
        End of License.
    </string>
    <string name="ratehint">Gib hier einen Feedback-Text ein...</string>
    <string name="emailhint">E-Mail (optional)</string>
    <string name="klasse">Klasse:</string>
    <string name="vibrateonreceive">Beim Erhalt einer Benachrichtigung vibrieren</string>
    <string name="receivepushes">Push-Nachrichten erhalten</string>
    <string name="selectkurse">Kurse auswählen...</string>
    <string name="settingkurse">kurse</string>
    <string name="settingklasse">klasse</string>
    <string name="settingstufe">stufe</string>
    <string name="settingpushes">receivePushes</string>
    <string name="settingvibrateLS">vibrateOnPushReceiveInLS</string>
    <string name="settingAuthorized">usrAuthorized</string>
    <string name="settingSaveLogin">saveLogin</string>
    <string name="settingUsrname">usrName</string>
    <string name="settingPwd">passwd</string>
    <string name="selectedkurseindices">selectedKurseIndices</string>
    <string name="saveLogin">Angaben speichern</string>
    <string name="angabenohnegewaehr">Alle Angaben ohne Gewähr! (Alpha Build)</string>
    <string name="settingRefreshIntervalMin">refreshIntervalMin</string>
    <string name="currentBadges">currentBadges</string>
    <string name="settingAuthenticated">settingAuthenticated</string>
    <string-array name="KurseQ1">
        <item>BI G1</item>
        <item>BI G2</item>
        <item>BIB 1</item>
        <item>BI L1</item>
        <item>BI L2</item>
        <item>IF G1</item>
        <item>IF L1</item>
        <item>M G1</item>
        <item>M G2</item>
        <item>M G3</item>
        <item>M G4</item>
        <item>M L1</item>
        <item>PL G1</item>
        <item>PL G2</item>
        <item>S0 G1</item>
        <item>S0 G2</item>
        <item>GE G1</item>
        <item>GE G2</item>
        <item>GE L1</item>
        <item>PH G1</item>
        <item>F G1</item>
        <item>E G1</item>
        <item>E G2</item>
        <item>E G3</item>
        <item>E G4</item>
        <item>E L1</item>
        <item>E L2</item>
        <item>KU G1</item>
        <item>KU G2</item>
        <item>KU G3</item>
        <item>KU L1</item>
        <item>LI G1</item>
        <item>SW G1</item>
        <item>SW G2</item>
        <item>SW L1</item>
        <item>PXM 1</item>
        <item>D G1</item>
        <item>D G2</item>
        <item>D G3</item>
        <item>D L1</item>
        <item>D L2</item>
        <item>EK G1</item>
        <item>EK L1</item>
        <item>CH G1</item>
        <item>CH L1</item>
        <item>ER G1</item>
        <item>KR G1</item>
        <item>KR G2</item>
        <item>SP G1</item>
        <item>SP G2</item>
        <item>SP G3</item>
        <item>SP G4</item>
        <item>SP G5</item>
        <item>SP G6</item>
        <item>PXC 1</item>
        <item>MU G1</item>
        <item>MUB G1</item>
        <item>PXM 1</item>
    </string-array>
    <string-array name="KurseQ2">
        <item>BI G1</item>
        <item>BI G2</item>
        <item>BI G3</item>
        <item>BI L1</item>
        <item>BI L2</item>
        <item>IF G1</item>
        <item>IF L1</item>
        <item>M G1</item>
        <item>M G2</item>
        <item>M G3</item>
        <item>M G4</item>
        <item>M L1</item>
        <item>PL G1</item>
        <item>PL G2</item>
        <item>PL L1</item>
        <item>S0 G1</item>
        <item>S0 G2</item>
        <item>GE G1</item>
        <item>GE G2</item>
        <item>GE L1</item>
        <item>PH G1</item>
        <item>PH G2</item>
        <item>F G1</item>
        <item>E G1</item>
        <item>E G2</item>
        <item>E G3</item>
        <item>E G4</item>
        <item>E L1</item>
        <item>KU G1</item>
        <item>KU G2</item>
        <item>SW G1</item>
        <item>SW G2</item>
        <item>SW L1</item>
        <item>PXM 1</item>
        <item>D G1</item>
        <item>D G2</item>
        <item>D G3</item>
        <item>D L1</item>
        <item>D L2</item>
        <item>EK G1</item>
        <item>EK G2</item>
        <item>EK L1</item>
        <item>CH G1</item>
        <item>CH G2</item>
        <item>CH L1</item>
        <item>ER G1</item>
        <item>KR G1</item>
        <item>SP G1</item>
        <item>SP G2</item>
        <item>SP G3</item>
        <item>SP G4</item>
        <item>SP G5</item>
        <item>PXC 1</item>
        <item>MU G1</item>
        <item>PXM 1</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="hintUsrname">Benutzername</string>
    <string name="hintpwd">Passwort</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="error_incorrect_creds">Inkorrekter Benutzername / Passwort.</string>
    <string name="error_field_required">Dieses Feld ist ein Pflichtfeld.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_sett">Einstellungen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Allgemein</string>
    
    <!-- Updates -->
    <string name="pref_header_vp_update">Update</string>

    <string name="pref_title_update_frequency">Update-Intervall</string>
    <string-array name="pref_update_frequency_titles">
        <item>15 Minuten</item>
        <item>30 Minuten</item>
        <item>45 Minuten</item>
        <item>1 Stunde</item>
        <item>2 Stunden</item>
        <item>Nie</item>
    </string-array>

    <string-array name="list_pref_stufen">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>EF</item>
        <item>Q1</item>
        <item>Q2</item>
    </string-array>

    <string-array name="list_pref_klassen">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <!-- Notifications -->
    <string name="pref_header_notifications">Benachrichtigungen</string>
    <string name="pref_title_receive_pushes">Push-Nachrichten erhalten</string>
    <string name="pref_title_vibrate_on_receive">Bei Erhalt einer Benachrichtigung vibrieren</string>
</resources>
