<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="vortex.vp_today.activity.SettActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" />
    <!--android:icon="@drawable/ic_info_black_24dp"-->

    <header
        android:fragment="vortex.vp_today.activity.SettActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications" />
    <!--android:icon="@drawable/ic_notifications_black_24dp"-->

    <header
        android:fragment="vortex.vp_today.activity.SettActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_vp_update" />
    <!--android:icon="@drawable/ic_sync_black_24dp"-->

</preference-headers>
